# lattice

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/lattice/: __init__.py  client.py  extract.py  metrics.py  polars_ext.py  sim_join.py  snapshot.py
tests/: test_client.py  test_extract.py  test_metrics.py  test_polars_ext.py  test_sim_join.py  test_snapshot.py
