[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lattice"
version = "0.1.0"
description = "Thin, dependency-minimal semantic dataframe ops over Polars. No platform."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "polars>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "numpy>=2.4.6",
    "usearch>=2.25.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",  # mock httpx at the transport layer, no live API calls in CI
]

[tool.hatch.build.targets.wheel]
packages = ["src/lattice"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
